# Multi-Agent-Home-Asset-Management-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  db_conn.py  db_init.py  docker-compose.yml  main.py  pyproject.toml
agent/: context.py  runner.py  system_prompt.py
agents/asset/: agent.py  agent.yaml
agents/asset/prompts/: system.md
agents/asset/tests/: test_asset_agent.py
agents/asset/workflows/: onboarding.py  suggestions.py
agents/insights/: agent.py  agent.yaml
agents/insights/prompts/: system.md
agents/insights/tests/: test_insights_agent.py
agents/maintenance/: agent.py  agent.yaml
agents/orchestrator/: agent.py  agent.yaml
components/: admin_tab.py  assets_tab.py  chat_tab.py  login.py  observability_tab.py  performance_tab.py  schedule_tab.py
core/: auth.py  base_agent.py  event_bus.py  events.py  executor.py  guardrails.py  models.py  observability.py  registry.py  schema.py  session.py
core/memory/: long_term.py  semantic.py  short_term.py
data/: asset_questions.json  home_asset_checklist.json  plant_care.json
eval/: framework.py  run_eval.py  scenarios.json
eval/benchmarks/: asset_agent.json  maintenance_agent.json  orchestrator.json
knowledge/policies/: maintenance_policies.yaml
knowledge/prompts/: library.yaml
knowledge/rag/: indexer.py
scripts/: send_monthly_reminder.py
skills/: onboarding.py  plant_care.py  suggestions.py  telegram_digest.py
tools/: __init__.py  db.py  mcp_server.py  schema.py  stdio_server.py
workflows/: onboarding.py  plant_care.py  suggestions.py  telegram.py
(+10 files in other folders)
